--- a/templates/photo.html
+++ b/templates/photo.html
@@ -5,7 +5,8 @@
   <title>photo: {{.PhotoID}}</title>
 </head>
 <h1>photo: {{.PhotoID}}</h1>
+<h3>TODO: add link to go back to album page</h3>
 <body>
-    <img src="/Users/moose1/Documents/photoApp/Photos/{{.PhotoID}}" alt="TODO: Photo metadata or tags">
+    <img src="/photos/{{.PhotoID}}" alt="TODO: Photo metadata or tags">
 </body>
 </html>
