Add link back to album on photo page

--- a/templates/photo.html
+++ b/templates/photo.html
@@ -6,6 +6,7 @@
 </head>
 <h1>photo: {{.PhotoID}}</h1>
 <h3>TODO: add link to go back to album page</h3>
+<h4><a href="/album/{{.AlbumID}}">Back to album</a></h4>
 <body>
     <img src="/photos/{{.PhotoID}}" alt="TODO: Photo metadata or tags">
 </body>
