add password management using bcrypt, rough logout management, and user registration

--- a/templates/login.html
+++ b/templates/login.html
@@ -19,5 +19,6 @@
           <input type="submit" value="Login">
         </div>
       </form>
+      <a href="/register/">Sign up</a>
 </body>
 </html>
