--- a/templates/photo.html
+++ b/templates/photo.html
@@ -4,8 +4,8 @@
   <meta charset = "UTF-8">
   <title>photo: {{.PhotoID}}</title>
 </head>
+<h5><a href="/login/?logout=yes">logout</a></h5>
 <h1>photo: {{.PhotoID}}</h1>
-<h3>TODO: add link to go back to album page</h3>
 <h4><a href="/album/{{.AlbumID}}">Back to album</a></h4>
 <body>
     <img src="/photos/{{.PhotoID}}" alt="TODO: Photo metadata or tags">
