--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
   <meta charset = "UTF-8">
   <title>{{.UserID}}'s albums</title>
 </head>
+<h5><a href="/login/?logout=yes">logout</a></h5>
 <h1>{{.UserID}}'s albums</h1>
 <body>
 <ul>
