Add support for deleting photos from album page
Added delete photo function and modified album html page to include
delete button for each photo. TO FIX: Deleting photos removes them from the
database and disk but still leaves an "empty" photo remaining on the
webpage.

--- a/templates/album.html
+++ b/templates/album.html
@@ -15,6 +15,7 @@
   {{range .Photos}}
   <li>
     <a href="/photo/{{.}}"><img src= "/photos/{{.}}" alt="TODO: Photo metadata or tags" style="width: 300px;"></a>
+    <form enctype="application/x-www-form-urlencoded" method="POST" action="/photo/delete/{{.}}"><input type="submit" value="delete"></form>
   </li>
   {{ end }}  
 </ul>
